# curtains-close

./: Cargo.toml  Makefile  README.md  settings.json  style.css
completions/: _curtains-close  curtains-close.bash  curtains-close.fish
completions_gen/: Cargo.toml
completions_gen/src/: main.rs
man/: curtains-close.1.scd  curtains-close.5.scd
src/: application.rs  command_button.rs  content_loader.rs  css_provider.rs  lib.rs  main.rs  options.rs  settings.rs
