[package]
name = "curtains-close"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Wayland-native logout script written in Rust/Gtk4"
repository = "https://github.com/waltosoft/curtains-close"

[workspace]
members = [".", "completions_gen"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
gdk4 = { version = "0.9.5", features = ["v4_10"] }
glib = "0.20.7"
gtk4 = { version = "0.9.5", features = ["v4_10"] }
gtk4-layer-shell = "0.4.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
